[tool.poetry]
name = "cympfh-search"
version = "0.1.0"
description = ""
authors = ["cympfh <cympfh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
